fixed modal overflow in mobile view

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -16,10 +16,11 @@
     #3cbcc3
   );
   transition: all 0.3s ease-in-out;
+  overflow-y: initial;
 }
 
 .modal__content {
-  position: fixed;
+  position: relative;
   z-index: 20;
   top: 50%;
   left: 50%;
@@ -29,12 +30,15 @@
   width: min(95%, 400px);
   padding: 3rem;
   border-radius: 16px;
-  height: auto;
+  max-height: 80vh;
+  min-height: auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow-y: auto;
 }
 
 .modal__button {
   position: absolute;
-  top: -30px;
-  left: -30px;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -5%);
 }
